# zypp-gui

./: .gitignore  Cargo.toml  README.md  meson.build  meson_options.txt
build-aux/: cargo.sh  dist-vendor.sh  openSUSE.software.Devel.json  org.openSUSE.software.Devel.json  zypp.gui.Devel.json
data/: additional.json  meson.build  mirror.json.in  openSUSE-software-service.desktop.in  openSUSE.software.desktop.in.in  openSUSE.software.gschema.xml.in  openSUSE.software.policy.in.in  org.openSUSE.software.desktop.in.in  org.openSUSE.software.gschema.xml.in  org.openSUSE.software.metainfo.xml.in.in  org.openSUSE.software.service.in  suggestion.json  zypp-gui-service.desktop.in  zypp.gui.desktop.in.in  zypp.gui.gschema.xml.in  zypp.gui.metainfo.xml.in.in  zypp.gui.policy.in.in  zypp.gui.service.in
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: additional_row.blp  additional_row.ui  list_row.blp  list_row.ui  mirror_row.blp  mirror_row.ui  mirror_window.blp  mirror_window.ui  page_settings.blp  repo_add.blp  repo_add.ui  repo_row.blp  repo_row.ui  search_row.blp  search_row.ui  suggestion_row.ui  window.blp  window.ui
hooks/: pre-commit.hook
mod_repo/: Cargo.toml
mod_repo/src/: main.rs  meson.build
packagekit_rs/: Cargo.toml
packagekit_rs/packagekit-sys/: Cargo.toml  build.rs
packagekit_rs/packagekit-sys/src/: lib.rs
packagekit_rs/packagekit-sys/tests/: abi.rs  constant.c  layout.c  manual.h
packagekit_rs/src/: client.rs  details.rs  lib.rs  package.rs  prelude.rs  progress.rs  results.rs  task.rs  update_detail.rs
packagekit_rs/src/auto/: enums.rs
packagekit_rs/tests/: packagekit.rs
po/: POTFILES.in
src/: additional.rs  application.rs  config.rs.in  connect_packagekit.rs  list_row.rs  main.rs  meson.build  mirror.rs  mirror_row.rs  mirror_window.rs  notification.rs  package_meta.rs  packagekit.rs  page_settings.rs  repo_row.rs  search.rs  search_row.rs  suggestion.rs  util.rs  window.rs  zypper.rs
tools/get_mirror_data/: Cargo.toml  get.sh
tools/get_mirror_data/src/: main.rs  name_convert.rs
zypp-gui/: Cargo.toml
zypp-gui/src/: list_row.rs  meson.build  mirror_window.rs  notification.rs  package_meta.rs  page_settings.rs  search.rs  window.rs  zypper.rs
