[package]
name = "opensuse_software"
version = "0.1.0"
authors = ["Xiaoguang Wang <xwang@suse.com>"]
edition = "2018"

[dependencies]
packagekit_rs = { path = "./packagekit_rs" }
libc = "0.2.95"
gio-sys = "0.10.1"
gio = "0.9.1"
glib = "0.10.3"
libhandy = "0.7.1"
polkit-sys = "0.1.0"
zbus = "1.9.1"
log = "0.4.14"
env_logger = "0.8.4"
gtk = "0.9.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
slog = "2.7.0"
slog-journald = "2.1.1"

