[package]
name = "opensuse_software"
version = "0.1.0"
authors = ["Xiaoguang Wang <sun.wxg@gmail.com>"]
edition = "2018"

[dependencies]
packagekit_rs = { path = "./packagekit_rs" }
libc = "0.2.95"
gtk = "0.14.0"
libhandy = "0.8.0"
polkit-sys = "0.1.0"
zbus = "1.9.1"
log = "0.4.14"
env_logger = "0.8.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }

