[package]
name = "zypp_gui"
version = "0.4.1"
authors = ["Xiaoguang Wang <sun.wxg@gmail.com>"]
edition = "2018"

[dependencies]
packagekit_rs = { path = "../packagekit_rs" }
libc = "0.2.95"
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
polkit-sys = "0.1.0"
zbus = "1.9.1"
log = "0.4.14"
env_logger = "0.8.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
gtk = { version = "0.9", package = "gtk4" }
gdk = { version = "0.9", package = "gdk4" }
async-channel = "2.1.1"
